Clean-up in views file and other files

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
   <%- include('./partials/head.ejs') %>
   <body>
     <%- include('./partials/nav.ejs') %>
-    <h1>Index page</h1>
+    <h1>Home page</h1>
     <h2>Welcome to the Home page <%= name %>.</h2>
   </body>
   <%- include('./partials/foot.ejs') %>
