--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,7 +2,7 @@
   <%- include('./partials/head.ejs') %>
   <body>
     <%- include('./partials/nav.ejs') %>
-    <h1>about page</h1>
+    <h1>About page</h1>
     <h2>Welcome to the About Page. See what we're all about!</h2>
   </body>
   <%- include('./partials/foot.ejs') %>
