--- a/views/playerPatch.ejs
+++ b/views/playerPatch.ejs
@@ -4,7 +4,7 @@
         <%- include('./partials/nav.ejs') %>
         <div class="create content">
             <form action="/players/<%= locals.theId %>?_method=PATCH" method="POST">
-                <label>Edit Player Names:</br>
+                <label>Edit Player Info:</br>
                     <input type="text" name="firstName" value="<%= locals.firstName %>" required>
                     <input type="text" name="lastName" value="<%= locals.lastName %>" required>
                     <input type="text" name="teamName" value="<%= locals.teamName %>" required>
