--- a/views/playerPut.ejs
+++ b/views/playerPut.ejs
@@ -4,7 +4,7 @@
         <%- include('./partials/nav.ejs') %>
         <div class="create content">
             <form action="/players/<%= locals.theId %>?_method=PUT" method="POST">
-                <label>Replace Player Names:</br>
+                <label>Replace Player Info:</br>
                     <input type="text" name="firstName" value="<%= locals.firstName %>" required>
                     <input type="text" name="lastName" value="<%= locals.lastName %>" required>
                     <input type="text" name="teamName" value="<%= locals.teamName %>" required>
